# rpt-rs

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
crates/crystal-formula/: Cargo.toml
crates/crystal-formula/src/: ast.rs  lexer.rs  lib.rs  parser.rs  token.rs  types.rs  validate.rs
crates/crystal-formula/src/eval/: mod.rs  value.rs  vm.rs
crates/crystal-formula/src/eval/builtins/: conversion.rs  datetime.rs  financial.rs  math.rs  mod.rs  numeral.rs  statistical.rs  string.rs
crates/crystal-formula/src/tests/: eval_tests.rs  lexer_tests.rs  mod.rs  parser_tests.rs  refs_tests.rs  statements_tests.rs  types_tests.rs  validate_tests.rs
crates/rpt/: Cargo.toml
crates/rpt-cli/: Cargo.toml
crates/rpt-cli/src/: inputs.rs  inspect.rs  main.rs  reencode.rs  saved.rs  sql.rs  streams.rs  tree.rs  util.rs
crates/rpt-cli/src/dump/: collect.rs  json.rs  mod.rs  parse.rs  render.rs  saved.rs  sweep.rs
crates/rpt-cli/src/export/: colors.rs  database.rs  mod.rs  objects.rs  selection.rs  util.rs  xml.rs
crates/rpt-cli/src/export/analysis/: field_format.rs  mod.rs  parameter_usage.rs  summary_fields.rs  usecount.rs
crates/rpt-cli/tests/: baseline.rs  eval_saved_oracle.rs
crates/rpt-data/: Cargo.toml
crates/rpt-data/src/: context.rs  diagnostics.rs  eval_time.rs  lib.rs  pipeline.rs  running_total.rs  schedule.rs  source.rs  summary.rs  tests.rs  value_order.rs
crates/rpt-db-postgres/: Cargo.toml
crates/rpt-db-postgres/src/: lib.rs
crates/rpt-db-sqlite/: Cargo.toml
crates/rpt-db-sqlite/src/: lib.rs
crates/rpt-engine/: Cargo.toml
crates/rpt-engine/src/: lib.rs
crates/rpt-engine/src/formula/: ast.rs  lexer.rs  mod.rs  parser.rs  refs.rs  token.rs  types.rs  types_table.rs
crates/rpt-engine/src/formula/tests/: lexer_tests.rs  mod.rs  parser_tests.rs  refs_tests.rs  types_tests.rs
crates/rpt-format-value/: Cargo.toml
crates/rpt-format-value/src/: civil.rs  lib.rs  picture.rs
crates/rpt-layout/: Cargo.toml
crates/rpt-layout/src/: aggregate.rs  crosstab.rs  emf.rs  format.rs  lib.rs  paginate.rs  place.rs  resolve.rs  tests.rs  text.rs
crates/rpt-layout/src/chart/: area.rs  bar.rs  common.rs  doughnut.rs  funnel.rs  gantt.rs  gauge.rs  histogram.rs  line.rs  mod.rs  numeric_axis.rs  pie.rs  radar.rs  render.rs  scatter.rs  stock.rs
crates/rpt-layout/src/chart/chart3d/: area3d.rs  mod.rs  projection.rs  riser.rs  scene.rs  surface.rs
crates/rpt-model/: Cargo.toml
crates/rpt-model/src/: data_def.rs  database.rs  document.rs  dom.rs  enums.rs  fit.rs  format.rs  lib.rs  objects.rs  primitives.rs  report_def.rs  saved.rs  tag.rs
crates/rpt-pages/: Cargo.toml
crates/rpt-pages/src/: backend.rs  lib.rs
crates/rpt-pages/tests/golden/: page.json
crates/rpt-query/: Cargo.toml
crates/rpt-query/src/: lib.rs  selection.rs  used_fields.rs
crates/rpt-render/: Cargo.toml
crates/rpt-render-cli/: Cargo.toml
crates/rpt-render-cli/src/: applog.rs  datasource.rs  locale.rs  main.rs  params.rs
crates/rpt-render-html/: Cargo.toml
crates/rpt-render-html/src/: lib.rs
crates/rpt-render-html/tests/golden/: page.html
crates/rpt-render-pdf/: Cargo.toml
crates/rpt-render-pdf/src/: common.rs  lib.rs  tests.rs  writer_basic.rs  writer_krilla.rs
crates/rpt-render-raster/: Cargo.toml
crates/rpt-render-raster/src/: lib.rs
crates/rpt-render-svg/: Cargo.toml
crates/rpt-render-svg/src/: lib.rs
crates/rpt-render-util/: Cargo.toml
crates/rpt-render-util/src/: lib.rs  stroke.rs  units.rs  xml.rs
crates/rpt-render/src/: lib.rs
crates/rpt-render/tests/: end_to_end.rs  facade.rs  pipeline_saved.rs  postgres_fixtures.rs
crates/rpt-test-support/: Cargo.toml
crates/rpt-test-support/src/: lib.rs
crates/rpt-text/: Cargo.toml
crates/rpt-text/fonts/: LICENSE
crates/rpt-text/src/: cosmic.rs  font_db.rs  lib.rs
crates/rpt-to-xml/: Cargo.toml
crates/rpt-to-xml/src/: database.rs  main.rs  objects.rs  selection.rs  util.rs  xml.rs
crates/rpt-to-xml/tests/: baseline.rs
crates/rpt/src/: bytes.rs  diagnostics.rs  error.rs  lib.rs  provenance.rs
crates/rpt/src/codec/: archive.rs  crypto.rs  digest.rs  header.rs  mask.rs  mod.rs  qe_crypto.rs  saved_data.rs  tile.rs  tree.rs  tslv.rs
crates/rpt/src/codec/saved/: crack.rs  memo.rs  mod.rs  packed.rs  schema.rs
crates/rpt/src/container/: mod.rs  stream_id.rs
crates/rpt/src/io/: mod.rs
crates/rpt/src/model/: data_def.rs  database.rs  document.rs  dom.rs  enums.rs  format.rs  mod.rs  objects.rs  primitives.rs  report_def.rs  saved.rs
crates/rpt/src/project/: fit.rs  mod.rs
crates/rpt/src/project/raise/: common.rs  data_def.rs  database.rs  dom.rs  mod.rs  parameters.rs  print_options.rs  subreport.rs
crates/rpt/src/project/raise/report_def/: chart.rs  conditions.rs  crosstab.rs  data_source.rs  formats.rs  grid.rs  mod.rs  objects.rs  sections.rs  summary.rs
crates/rpt/src/records/: mod.rs  raw.rs  rtype.rs  tag.rs
crates/rpt/tests/: chart_legend.rs  crosstab.rs  fixtures.rs  hyperlink.rs  writer.rs
docs/: 01-format-overview.md  02-container.md  03-stream-decoding.md  04-record-tree.md  05-semantic-model.md  06-block-catalog.md  07-codebase.md  08-usage.md  09-support-matrix.md  10-saved-data.md  11-rendering.md  12-render-examples.md  README.md  appendix-endianness.md
docs/formula-engine/: 01-architecture.md  02-language.md  03-builtins.md  04-validation.md  README.md
tests/fixtures/: README.md
tests/fixtures/baselines/: ajryan_AccountBalance.xml  ajryan_AccountBalance_HANA.xml  ajryan_Activity.xml  ajryan_Activity_HANA.xml  ajryan_B1Budget_M.xml  ajryan_B1Budget_Q.xml  ajryan_BOM.xml  ajryan_BOM_HANA.xml  ajryan_CustomerEquipmentCard.xml  ajryan_CustomerEquipmentCard_HANA.xml  ajryan_Documents v2 (With Serial And Batch Details - invoice show data from delivery as well).xml  ajryan_Documents v2 (With serial and batch details).xml  ajryan_Documents.xml  ajryan_Documents_HANA (With Serial And Batch Details - invoice show data from delivery as well).xml  (+78 more)
(+184 files in other folders)
