[package]
name = "rpt-cli"
description = "Command-line tool to inspect SAP Crystal Reports .rpt files"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["command-line-utilities"]
rust-version.workspace = true

[[bin]]
name = "rpt"
path = "src/main.rs"

[dependencies]
rpt.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
