[package]
name = "rpt-format-value"
description = "Crystal value→string formatting (number/currency/date/time/bool) — the icu-equivalent formatting layer, spec-driven with en-US defaults"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde"]

[lints]
workspace = true
