[package]
name = "rpt-to-xml"
description = "Export a SAP Crystal Reports .rpt file to a structured XML document"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "encoding"]
rust-version.workspace = true

[[bin]]
name = "rpt-to-xml"
path = "src/main.rs"

[dependencies]
rpt = { workspace = true, features = ["serde"] }
rpt-engine = { workspace = true }

[dev-dependencies]
similar = "2"

[lints]
workspace = true
