[package]
name = "rpt"
description = "Pure-Rust reader for Crystal Reports .rpt files"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = []
serde = ["dep:serde", "rpt-model/serde"]

[dependencies]
rpt-model.workspace = true
cfb.workspace = true
miniz_oxide.workspace = true
thiserror.workspace = true
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
rpt-test-support = { workspace = true }

[lints]
workspace = true
